# savemgr

./: .gitignore  README.md  pyproject.toml
savemgr/: constants.py  main.py
savemgr/cli/: backup.py  game.py  import_save.py  restore.py  save.py
savemgr/core/: config.py  platform.py  resolver.py  snapshot.py
savemgr/models/: game.py  snapshot.py
savemgr/tests/: conftest.py  test_config.py  test_models.py  test_platform.py  test_resolver.py  test_snapshot.py
